--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-drop-down-item": "^1.0.5",
+    "react-native-picker-select": "^6.1.0",
     "react-navigation": "^3.9.1",
     "react-redux": "6.0.1",
     "redux": "^4.0.1",
