SDK 33.0.0으로 업데이트

--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "expo": "^32.0.0",
+    "expo": "^33.0.0",
+    "expo-asset": "^5.0.1",
     "prop-types": "^15.7.2",
-    "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react": "16.8.3",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-drop-down-item": "^1.0.5",
     "react-native-picker-select": "^6.1.0",
-    "react-navigation": "^3.9.1",
+    "react-navigation": "^3.11.0",
     "react-redux": "6.0.1",
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0",
