--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "axios": "^0.18.0",
     "expo": "^33.0.0",
     "expo-asset": "^5.0.1",
+    "expo-image-picker": "~5.0.2",
+    "expo-permissions": "~5.0.1",
     "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
